# turtlebot_robot

./: .gitattributes  README.md  start.sh
robot_master/: CMakeLists.txt  package.xml
robot_master/config/: delivery_pose.yaml  parcel_locations.yaml
robot_master/include/robot_master/: lift_controller.hpp  main_window.hpp  qnode.hpp  robot_driving.hpp  task_manager.hpp
robot_master/launch/: robot_master.launch.py
robot_master/src/: lift_controller.cpp  main.cpp  main_window.cpp  qnode.cpp  robot_driving.cpp  task_manager.cpp
robot_master/ui/: mainwindow.ui
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/action/: LiftAction.action  PreciseControl.action
robot_msgs/msg/: LogMessage.msg  MasterMsg.msg  OCRRequest.msg  OCRResult.msg  VisionMsg.msg
robot_msgs/srv/: ItemInfo.srv  ItemSearchRequest.srv  LiftControl.srv  NavigateToParcel.srv  OCRScan.srv  PreciseControl.srv  RecognizeItem.srv
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/config/: behavior_tree,xml  map.pgm  map.yaml  nav2_params.yaml  tb3_nav.rviz  tb3_nav_params.yaml
robot_navigation/include/robot_navigation/: navigation_manager.hpp  robot_navigation.hpp  waypoint_navigator.hpp
robot_navigation/launch/: navigation_launch.py
robot_navigation/maps/: map.pgm  map.yaml
robot_navigation/src/: main.cpp  main_navigator.cpp  navigation_manager.cpp  robot_navigation.cpp  waypoint_navigator.cpp
robot_vision/: CMakeLists.txt  package.xml
robot_vision/include/robot_vision/: main_window.hpp  qnode.hpp  vision.hpp
robot_vision/launch/: vision_system.launch.py
robot_vision/scripts/: ocr_inference_node.py
robot_vision/src/: main.cpp  main_window.cpp  qnode.cpp  vision.cpp
robot_vision/ui/: mainwindow.ui
