<package format="3"> 
  <name>robot_master</name>
  <version>0.1.0</version>
  <description>

    robot_master

  </description>
  <maintainer email="hong091788@naver.com">hyeon</maintainer>
  <author>hyeon</author>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>robot_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
