<package format="3">
  <name>robot_navigation</name>
  <version>0.1.0</version>
  <description>
    robot_navigation
  </description>
  <maintainer email="hong091788@gmail.com">hyeon</maintainer>
  <author>hyeon</author>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>